expanded site survey
